# orbit-assist

./: .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  dev.py  main.py  pyproject.toml
.github/workflows/: claude.yml  deploy.yml
src/: main.py
src/orbit_assist/: app.py  dev.py
src/orbit_assist/api/: deps.py  router.py
src/orbit_assist/api/routes/: add_calendar_event.py  analyze_chart.py  calendar.py  entities.py  entity.py  health.py  jobs.py  prompt.py  suggestEntity.py
src/orbit_assist/clients/: genai.py  http.py
src/orbit_assist/core/: analysis_config.py  analyze_jobs.py  calendar.py  config.py  entity.py  fetch_analysis_config.py  logging.py  models.py
src/orbit_assist/db/: pool.py
src/orbit_assist/schemas/: analysis_config.py  analyze_chart.py  calendar.py  entity.py  jobs.py  prompt.py
